# low-latency-voice-agent

./: .env.example  .gitignore  Dockerfile  HANDOVER_PROMPT.md  PROJECT_PLAN.md  README.md  adiiva_r.md  claude.md  docker-compose.yml  pyproject.toml  requirements.txt  test_dg_ws.py  uvicorn_log.txt  uvicorn_log2.txt
app/: __init__.py  config.py  logging_config.py  main.py  metrics.py  models.py  session.py
app/pipeline/: __init__.py  llm.py  prompts.py  stt.py  tools.py  tts.py
assets/: README.txt
client/: app.js  index.css  index.html
doc/: DEMO_PREP.md  HANDOVER_PROMPT.md  PROJECT_PLAN.md  claude.md
prototype_adiiva.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: test_client.py
